--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ pom.properties
 
 # ignore properties file
 config.properties
+shoong.properties
 
 # External tool builders
 .externalToolBuilders/
